don't wrap title and subtitle in p tags and fix css

--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -1,8 +1,8 @@
-.text-white p {
+.text-white {
     color: white;
     font-weight: bold;
 }
 
-.text-white p strong {
+.text-white strong {
     color: #1befc5;
 }
